--- a/similarity.ipynb
+++ b/similarity.ipynb
@@ -45,18 +45,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def formatJensenTopics(topic_distribution):\n",
-    "    maxTopics = max(topic_distribution[1])\n",
-    "    result = np.zeros(maxTopics+1)\n",
-    "    for topic, distribution in topic_distribution:\n",
-    "        result[topic] = distribution\n",
-    "    return result"
+    "def formatJensenTopics(topic_distribution1, topic_distribution2):\n",
+    "    max1 = max(topic_distribution1[1])\n",
+    "    max2 = max(topic_distribution2[1])\n",
+    "    maxTopics = max(max1, max2)\n",
+    "    result1 = np.zeros(maxTopics+1)\n",
+    "    result2 = np.zeros(maxTopics+1)\n",
+    "    for topic, distribution in topic_distribution1:\n",
+    "        result1[topic] = distribution\n",
+    "    for topic, distribution in topic_distribution2:\n",
+    "        result2[topic] = distribution\n",
+    "    return result1, result2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def similarity_between_distribution_and_keyword_pair(distribution_keyword_pair1: tuple, distribution_keyword_pair2: tuple, lambd=0.4) -> int:\n",
+    "    distribution1, keywords1 = distribution_keyword_pair1\n",
+    "    distribution2, keywords2 = distribution_keyword_pair2\n",
+    "\n",
+    "    jaccardSim = jaccard(keywords1, keywords2)\n",
+    "    JensenShannonSim = jsd(formatJensenTopics(distribution1, distribution2))\n",
+    "    \n",
+    "    # Lower lambda will put more emphasis on the Jenson Shanon Similarity.\n",
+    "    # Higher lambda will put more emphasis on the Jaccard Similarity\n",
+    "    similarity(jaccardSim, JensenShannonSim, lambd)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "TreeHacks2023",
    "language": "python",
    "name": "python3"
   },
@@ -70,12 +93,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9 (main, Jan 11 2023, 09:18:20) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "88dfe339ad4a13743851eac60f6908f693637706d6c9276063751ae3533c3ab7"
+    "hash": "b27881f646ba572b88db1eb6553cb1b31e628a381bc21d094b1f6b3ca2c91292"
    }
   }
  },
