--- a/iep/ML_models/grades_analysis.ipynb
+++ b/iep/ML_models/grades_analysis.ipynb
@@ -59,7 +59,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TreeHacks2023",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -73,12 +73,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b27881f646ba572b88db1eb6553cb1b31e628a381bc21d094b1f6b3ca2c91292"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
